# backup-to-blob

./: Cargo.toml  README.md
src/: azure.rs  blob_client.rs  main.rs
