[package]
name = "backup-to-blob"
version = "0.1.0"
authors = ["Rajasekharan Vengalil <avranju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_sdk_for_rust = "0.12"
structopt = "0.3"
tar = "0.4"
xz2 = "0.1"