[package]
name = "backup-to-blob"
version = "0.1.0"
authors = ["Rajasekharan Vengalil <avranju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.0"
derive_more = "0.99"
futures = "0.3"
surf = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.3"
structopt = "0.3"
tar = "0.4"
xz2 = "0.1"